# Winfetch

./: CMakeLists.txt  LICENSE  README.md  cpu.c  lib.h  main.c  ram.c  winfetch.c
moduls/: cpu.h  ram.h
src/: ascii-icon.c  ascii_icon.h  lib.h  winfetch.c  winfetch.h
src/moduls/: PcInfo.c  PcInfo.h  cpu.c  cpu.h  gpu.c  gpu.h  ram.c  ram.h
